--- a/app/views/recipes_controller/index.html.erb
+++ b/app/views/recipes_controller/index.html.erb
@@ -1,2 +1,23 @@
-<h1>RecipesController#index</h1>
-<p>Find me in app/views/recipes_controller/index.html.erb</p>
+<h1>Searching for - <%= @search_team %></h1>
+
+<% if @Recipes.nil? %>
+
+<p>No Recipes found with relevant information... Sorry </p>
+
+<% else %>
+<table border="1">
+	<tr>
+		<th>Thumbnail</th>
+		<th>Title</th>
+		<th>Rank</th>
+	</tr>
+	<% @Recipes.each do |recipe| %>
+		<tr class=<%= cycle('even','odd') %>>
+			<td><%= link_to image_tag(recipe["image_url"], size:'100x100'), recipe["source_url"]%></td>
+			<td><%= link_to sanitize(recipe["title"]), recipe["source_url"]%></td>
+			<td><%= recipe["social_rank"] %></td>	
+			
+		</tr>
+	<% end %>
+</table>
+<% end %>
